--- a/estilos/style.css
+++ b/estilos/style.css
@@ -39,7 +39,7 @@ body {
 /* Custom Navbar */
 .navbar-custom {
   background: var(--primary-color) !important;
-  padding: 0.75rem 0;
+  padding: 0px;
   -webkit-box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
   box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
@@ -444,7 +444,7 @@ body {
     rgba(44, 82, 130, 0.92) 100%
   );
   color: var(--white);
-  padding: 10rem 0;
+  padding: 14rem 0;
   position: relative;
   overflow: hidden;
 }
